# GooseEYE

./: .appveyor.yml  .ci_environment_docs.yaml  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  Ensemble_8hpp.html  Ensemble_8hpp_source.html  Ensemble__C2_8hpp.html  Ensemble__C2_8hpp_source.html  Ensemble__L_8hpp.html  Ensemble__L_8hpp_source.html  Ensemble__S2_8hpp.html  Ensemble__S2_8hpp_source.html  Ensemble__W2_8hpp.html  Ensemble__W2_8hpp_source.html  Ensemble__W2c_8hpp.html  Ensemble__W2c_8hpp_source.html  Ensemble__heightheight_8hpp.html  Ensemble__heightheight_8hpp_source.html  Ensemble__mean_8hpp.html  Ensemble__mean_8hpp_source.html  GooseEYE.pc.in  GooseEYEConfig.cmake  GooseEYEConfig.cmake.in  GooseEYE_8h.html  GooseEYE_8h.js  GooseEYE_8h_source.html  GooseEYE_8hpp.html  GooseEYE_8hpp.js  GooseEYE_8hpp_source.html  README.md  annotated.html  annotated_dup.js  classGooseEYE_1_1ClusterLabeller-members.html  classGooseEYE_1_1ClusterLabeller.html  classGooseEYE_1_1ClusterLabeller.js  classGooseEYE_1_1Ensemble-members.html  classGooseEYE_1_1Ensemble.html  (+41 more)
.github/workflows/: ci.yml  gh-pages.yml  pre-commit.yml
docs/: Makefile  changelog.rst  conf.py  cpp.rst  cpp_functions.rst  cpp_install.rst  cpp_intro.rst  dev_qt.rst  develop.rst  gui.rst  index.rst  install.rst  python.rst  python_functions.rst  python_install.rst  python_intro.rst  python_usage.rst  quickstart.rst  requirements.txt  theory.rst  theory_C2.rst  theory_L.rst  theory_S2.rst  theory_W2.rst  theory_clusters.rst  theory_heightheight.rst
docs/examples/: C2.cpp  C2.h5  C2.py  CMakeLists.txt  L.cpp  L.h5  L.py  S2.cpp  S2.h5  S2.py  S2_autocorrelation.cpp  S2_autocorrelation.h5  S2_autocorrelation.py  S2_ensemble.cpp  S2_ensemble.h5  S2_ensemble.py  S2_mask.cpp  S2_mask.h5  S2_mask.py  W2.cpp  W2.h5  W2.py  W2c.cpp  W2c.h5  W2c.py  clusters.cpp  clusters.h5  clusters.py  clusters_algorithm.html  clusters_algorithm.py  clusters_centers.cpp  clusters_centers.h5  clusters_centers.py  clusters_dilate.cpp  clusters_dilate.h5  clusters_dilate.py  clusters_dilate_periodic.h5  clusters_dilate_periodic.py  heightheight.cpp  heightheight.h5  (+8 more)
docs/examples/methods/: otsu.py  readme.rst
docs/examples/python/: L.py  S2.py  S2_cluster.py  S2_mask.py  W2.py  heightheight.py  pixel_path.py  readme.rst  roughness.py
docs/examples/python/image/: L.py  S2.py  S2_cluster.py  S2_mask.py  W2.py  W2c.py  clusters.py  clusters_dilate.py  pixel_path.py
docs/tricks/segmentation/: otsu.py  readme.rst
gui/: GooseEYE.pro  mainwindow.cpp  mainwindow.h  qcustomplot.cpp  qcustomplot.h
include/GooseEYE/: Ensemble.hpp  EnsembleVariance.hpp  EnsembleVariance_roughness.hpp  Ensemble_C2.hpp  Ensemble_L.hpp  Ensemble_S2.hpp  Ensemble_W2.hpp  Ensemble_W2c.hpp  Ensemble_heightheight.hpp  Ensemble_mean.hpp  Ensemble_roughness.hpp  Ensemble_stampPoints.hpp  GooseEYE.h  GooseEYE.hpp  clusters.hpp  config.h  detail.h  detail.hpp  dilate.hpp  dummy_circles.hpp  kernel.hpp  path.hpp  python.cpp  random.hpp  version.h  version.hpp
python/: main.cpp
python/GooseEYE/: __init__.py
search/: all_0.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_b.js  all_c.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_a.js  functions_b.js  namespaces_0.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js  variables_1.js
src/: CMakeLists.txt  GooseEYE.pro  gui_GooseEYE.pro  gui_main.cpp  gui_mainwindow.cpp  gui_mainwindow.h  gui_mainwindow.ui  image.cpp  image.h  image_batch.h  py_image.cpp  test.py
src/GooseEYE/: Ensemble.h  Ensemble.hpp  Ensemble_L.hpp  Ensemble_S2.hpp  Ensemble_W2.hpp  Ensemble_W2c.hpp  Ensemble_mean.hpp  Ensemble_stampPoints.hpp  GooseEYE.h  GooseEYE.hpp  Private.h  Private.hpp  clusters.hpp  dilate.hpp  dummy_circles.hpp  include.h  kernel.hpp  path.hpp  python.cpp
src/core/: batch.h  image.cpp  image.h  image_batch.h  macros.h
src/gui/: GooseEYE.pro  batch.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/gui/GooseEYE/: GooseEYE.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/python/: CMakeLists.txt  image.cpp  setup.py
test/: CMakeLists.txt  Ensemble.cpp  clusters.cpp  detail.cpp  dilate.cpp  main.cpp  numerical_solutions.cpp
tests/: CMakeLists.txt  Ensemble.cpp  clusters.cpp  detail.cpp  dilate.cpp  main.cpp  miscellaneous.cpp  numerical_solutions.cpp  test_cluster.py  test_clusters.py  test_clusters_example.py  test_historic.py  test_structure.py
